Require intrinsics_gen for DataInstrumentation
We work on the attributes which must be generated before.

--- a/lib/Transforms/DataInstrumentation/CMakeLists.txt
+++ b/lib/Transforms/DataInstrumentation/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_llvm_loadable_module( LLVMDataInstrumentation
-  InstrumentationTarget.cpp
   Instrumenter.cpp
+
+  DEPENDS
+  intrinsics_gen
 
   PLUGIN_TOOL
   opt
